--- a/.github/workflows/gitops.yaml
+++ b/.github/workflows/gitops.yaml
@@ -1,9 +1,9 @@
 name: "SonnarQube SAST Scan"
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
 jobs:
   sonarqube-sast-scan:
