--- a/.github/workflows/buildandpush.yaml
+++ b/.github/workflows/buildandpush.yaml
@@ -21,5 +21,5 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t docker.io/arigelarajesh45/gamedemo:${{env.VERSION}}
+          docker build -t docker.io/arigelarajesh45/gamedemo:${{env.VERSION}} .
           docker push docker.io/arigelarajesh45/gamedemo:${{env.VERSION}}
