--- a/.github/workflows/buildandpush.yaml
+++ b/.github/workflows/buildandpush.yaml
@@ -1,9 +1,9 @@
 name: "Build and Push Docker image to Docker Hub"
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
 env:
   VERSION: $(( $(cat version.txt) + 1 ))
