--- a/.github/workflows/trivy-img-scan.yaml
+++ b/.github/workflows/trivy-img-scan.yaml
@@ -1,9 +1,9 @@
 name: "Run Container Scan"
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
 jobs:
   run_container_image_scan_on_supermario_docker_image:
