--- a/.github/workflows/e2e-gitops.yaml
+++ b/.github/workflows/e2e-gitops.yaml
@@ -1,24 +1,23 @@
 name: "Run SAST, Build and push supermario image, scan image, Update deployment and version files"
- 
+
 on:
   push:
     branches:
       - main
- 
+
 env:
   VERSION: $(( $(cat version.txt) + 1 ))
-  
+
 jobs:
- 
   sonarqube_sast_scan:
     runs-on: ubuntu-latest
- 
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for better analysis relevance
- 
+          fetch-depth: 0 # Shallow clones should be disabled for better analysis relevance
+
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
         env:
@@ -31,59 +30,59 @@ jobs:
       #   timeout-minutes: 5
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  
+
   build_push_supermario_docker_image:
     runs-on: ubuntu-latest
     needs: sonarqube_sast_scan
- 
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-  
+
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
- 
+
       - name: Build and Push Docker Image
         run: |
           docker build -t docker.io/arigelarajesh45/gamedemo:${{ env.VERSION }} .
           docker push docker.io/arigelarajesh45/gamedemo:${{ env.VERSION }}
- 
+
   run_container_image_scan_on_supermario_docker_image:
     runs-on: ubuntu-latest
-    needs: build_push_supermario_docker_image	
- 
+    needs: build_push_supermario_docker_image
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
- 
+
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-        
+
       - name: Get Docker Image from Docker Hub
         run: |
           docker pull docker.io/arigelarajesh45/gamedemo:${{ env.VERSION }}
-          docker save -o supermariolatestdockerimage.tar docker.io/arigelarajesh45/gamedemo:${{ env.VERSION }}
-     
+          docker save -o ${{ github.workspace }}/supermariolatestdockerimage.tar docker.io/arigelarajesh45/gamedemo:${{ env.VERSION }}
+
       - name: Run Trivy vulnerability scanner in tarball mode
         uses: aquasecurity/trivy-action@master
         with:
-          input: /github/workspace/supermariolatestdockerimage.tar
-          exit-code: '0'
-          severity: 'CRITICAL,HIGH'
-          
+          input: ${{ github.workspace }}/supermariolatestdockerimage.tar
+          exit-code: "0"
+          severity: "CRITICAL,HIGH"
+
   update_k8s_yaml_version_file_with_latest_image_tag:
     runs-on: ubuntu-latest
     needs: run_container_image_scan_on_supermario_docker_image
-    
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
- 
+
       - name: Set Git Config
         run: |
-           git config --global user.email "${{ secrets.GIT_EMAIL}}"
-           git config --global user.name "${{ secrets.GIT_USERNAME}}"
- 
+          git config --global user.email "${{ secrets.GIT_EMAIL}}"
+          git config --global user.name "${{ secrets.GIT_USERNAME}}"
+
       - name: Update Deployment YAML
         run: |
           git pull
@@ -92,4 +91,4 @@ jobs:
           CURRENT_VERSION=$(cat version.txt)
           git add deployment.yaml version.txt
           git commit -m "Updated deployment yaml and version txt file with supermario image tag to ${CURRENT_VERSION}"
-          git push 
+          git push
